Updated .gitignore file to ignore 2022-specific shapefiles for Utqiagvik.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .Rhistory
 .RData
 .Ruserdata
+
 Output/
 R-Markdown/
 Input/rgee_environment_dir.rds
+*Utqiagvik2022_Drone*
+*Utqiagvik2022_FullPlot*
+*Utqiagvik2022_Nest*
+*Utqiagvik_QGIS*
