--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 Output/
 R-Markdown/
 Input/rgee_environment_dir.rds
+Input/rgee_credentials_dir.rds
 *Utqiagvik2022_Drone*
 *Utqiagvik2022_FullPlot*
 *Utqiagvik2022_Nest*
